# AI_Web_Tester

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  README_EN.md  ROADMAP.md  TODO.md  main.py  pyproject.toml
docs/: test_report.html
docs/superpowers/plans/: 2026-04-13-chrome-extension-recorder.md
examples/: conftest.py  test_baidu_search.py  test_demo.py
extension/: manifest.json
extension/popup/: popup.css  popup.html  popup.js
extension/src/: background.js  recorder.css  recorder.js
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CodeBlock.tsx  DatasetEditor.tsx
src/ai_tester/: __init__.py  agent.py  asserter.py  dom_parser.py  driver.py  extractor.py  generator.py  healer.py  logger.py  pytest_fixtures.py  pytest_plugin.py  run_context.py
src/ai_tester/inject/: extract_elements.js
src/ai_tester/prompts/: agent_system_prompt.txt  healer_system_prompt.txt
tests/: conftest.py  generate_test.py  test_baidu_search.py  test_demo.py  test_multi_tab_iframe.py  test_template.py
web_server/: app.py  database.py  requirements.txt
